objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Addresses__c</fullName>
        <label>Addresses</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bill To same as Sold To</fullName>
                </value>
                <value>
                    <fullName>Ship To same as Sold To</fullName>
                </value>
                <value>
                    <fullName>Both same as Sold To</fullName>
                </value>
                <value>
                    <fullName>All different addresses</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDL_Email__c</fullName>
        <formula>BDL_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDL Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDL_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>person the quote was prepared on behalf of</description>
        <inlineHelpText>person the quote was prepared on behalf of</inlineHelpText>
        <label>BDL Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BDL_Phone__c</fullName>
        <formula>BDL_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDL Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_1__c</fullName>
        <label>Bill To Address 1</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_2__c</fullName>
        <label>Bill To Address 2</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Blank__c</fullName>
        <formula>OR(
  ISBLANK(Bill_To_Address_1__c),
  ISBLANK(Bill_To_City__c),
  ISBLANK(Bill_To_Postal_Code__c),
  ISBLANK(Bill_To_Country_Code__c),
  AND(
    ISBLANK(Bill_To_Company__c),
    ISBLANK(Bill_To_Last_Name__c)
  ),
  AND(
    ISBLANK(Bill_To_State__c),
    OR(
      Bill_To_Country_Code__c = &quot;USA&quot;,
      Bill_To_Country_Code__c = &quot;CAN&quot;
    )
  )
)</formula>
        <inlineHelpText>If checked, one or more of the bill to address fields are blank.</inlineHelpText>
        <label>Bill To Blank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_To_City__c</fullName>
        <label>Bill To City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Company__c</fullName>
        <label>Bill To Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Country_Code__c</fullName>
        <inlineHelpText>For United States, enter &quot;USA.&quot; For Canada, enter &quot;CAN.&quot; For any other country, see http://www.worldatlas.com/aatlas/ctycodes.htm.</inlineHelpText>
        <label>Bill To Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Day_Phone__c</fullName>
        <label>Bill To Day Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bill_To_Email__c</fullName>
        <label>Bill To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bill_To_First_Name__c</fullName>
        <label>Bill To First Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Last_Name__c</fullName>
        <label>Bill To Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Postal_Code__c</fullName>
        <label>Bill To Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_State__c</fullName>
        <label>Bill To State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blended_MMU__c</fullName>
        <formula>( TotalPrice - Total_ELC__c )/ TotalPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blended MMU%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CA_Contract_Total__c</fullName>
        <formula>TotalPrice  +   Freight_Fees__c  +  CA_Overall_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Contract Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CA_Overall_Tax__c</fullName>
        <formula>Tax_on_Merchandise__c +   Tax_on_Project_Freight_Quote__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Overall Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CW_Confirmation_Email__c</fullName>
        <inlineHelpText>To keep (PM) email in separate field from Quote &quot;Prepared For&quot; to whom quote and payment links are sent.</inlineHelpText>
        <label>CW Confirmation Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CW_Freight_Total_2__c</fullName>
        <formula>IF( Freight_Fees__c =0&amp;&amp; Freight_Override__c =False, Contract_Freight__c + Retail_Freight__c+ Canada_Freight__c ,Freight_Fees__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This amount maps to CW Order and is the total of the applicable freight model. 1. Canada (17%) 2. Contract (7%) 3. Project Freight Request 4. Freight Override ($0) 5. Retail.</inlineHelpText>
        <label>CW Freight Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CW_Freight__c</fullName>
        <formula>Calculated_Shipping__c + Calculated_Handling__c + Freight_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expedited Shipping Fee + Calculated Shipping + Calculated Handling +  Project Frieght Request</inlineHelpText>
        <label>*CW Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CW_Message_1__c</fullName>
        <inlineHelpText>First line of CW Order Message. Does not wrap. Please use Line 2.</inlineHelpText>
        <label>*CW Message Line 1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CW_Message_2__c</fullName>
        <inlineHelpText>Second line of the CW Order Message.</inlineHelpText>
        <label>*CW Message Line 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Handling_VF__c</fullName>
        <label>Calculated Handling VF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Handling__c</fullName>
        <formula>IF(OR( Freight_Fees__c &gt; 0, Manager_Shipping_Override__c =True), 0, 

IF( Use_7_Fee_Structure__c =&quot;Yes&quot;, (Products_with_Handling_Fees__c * 0.07), 

CASE(Range_for_Handling_Fees__c, 
&quot;Local&quot;, 
CASE(Country__c, 
&quot;CA&quot;,225,149), 
&quot;Extended&quot;, 
CASE(Country__c, 
&quot;CA&quot;,325,&quot;US&quot;,229,149), 
&quot;National&quot;, 
CASE(Country__c, 
&quot;CA&quot;,425,&quot;US&quot;,349,149), 
0) + 

IF( Quoted_On__c &gt;= DATE(2015,03,21) &amp;&amp; (ISPICKVAL(Country__c,&quot;US&quot;)||ISPICKVAL(Country__c,&quot;Offshore&quot;)), 
CASE(Range_for_Handling_Fees__c,&quot;N/A&quot;,0,&quot;Local&quot;,50,100),0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated by SFDC. Flat handling fees are added for any relevant Products based on Range for Handling Fees value. Value will be 0 if Project Freight Quote is entered or Manager Shipping Override is True</inlineHelpText>
        <label>Calculated Handling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Shipping__c</fullName>
        <inlineHelpText>Calculated by SFDC. If &quot;Use 7%...&quot;=yes, this = 7% * discounted line item total of all Opp Products where the Ship Via is not = 5/6/10. If no, this = flat fee determined by Products_with_Shipping_Fee. Value will be 0 if Project Freight Quote is entered.</inlineHelpText>
        <label>Calculated Shipping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Surcharge_VF__c</fullName>
        <label>Calculated Surcharge_VF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Surcharge__c</fullName>
        <formula>IF( Freight_Fees__c &gt; 0, 0, 
Sum_of_Product_Surcharges__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated by SFDC. Sums the Surcharge Amount * Quantity associated with all relevant Products linked with this Quote. Value will be 0 if Project Freight Quote is entered.</inlineHelpText>
        <label>Calculated Surcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Canada_Freight__c</fullName>
        <formula>IF(AND(Final_Ship_To_Country_Formula__c &lt;&gt; &quot;Canada&quot; , Freight_Fees__c = 0 ,Freight_Override__c =False),0, 
IF(Products_with_Shipping_Fees__c +  Products_with_Handling_Fees__c &lt;= 10000.00,0.12 *  Merchandise_Total__c, 
IF(Products_with_Shipping_Fees__c +  Products_with_Handling_Fees__c &gt;10000.00,0.17 *  Merchandise_Total__c, 
0.00)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canada Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Conga_Template_ID__c</fullName>
        <formula>IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;, TEXT(Country__c)=&quot;CA&quot;),&quot;a0U50000002eo63&quot;,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;Yes&quot;, TEXT(Country__c)=&quot;CA&quot;),&quot;a0U50000002f2tw&quot;,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;, TEXT(Country__c)=&quot;US&quot;),&quot;a0U50000002ekU0&quot;,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;,TEXT(Country__c)=&quot;Offshore&quot;),&quot;a0U50000002fJJD&quot;,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;Yes&quot;,TEXT(Country__c)=&quot;Offshore&quot;),&quot;a0U50000002fPAa&quot;,
&quot;a0U50000002f2tm&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Template ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <formula>CASESAFEID(ContactId )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Freight__c</fullName>
        <formula>IF(Use_7_Contract_Model__c =&quot;Yes&quot;&amp;&amp; Freight_Fees__c = 0&amp;&amp; Freight_Override__c =False&amp;&amp;  Final_Ship_To_Country_Formula__c  &lt;&gt; &quot;Canada&quot;, Merchandise_Total__c *0.07, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Total__c</fullName>
        <formula>Total__c + Shipping_Fees__c + Handling_Fees__c+ Freight_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Conversion_Message__c</fullName>
        <inlineHelpText>If there are errors in the conversion process this field will tell you.</inlineHelpText>
        <label>Conversion Message</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conversion_Status__c</fullName>
        <inlineHelpText>Did the &apos;magic button&apos; move your quote to an order in CW? This field will tell you.</inlineHelpText>
        <label>Conversion Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Sent</fullName>
                    <default>true</default>
                    <label>Not Yet Sent</label>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Conversion Error</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country Shipping to</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAN</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Offshore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Terms__c</fullName>
        <formula>TEXT(Opportunity.Credit_Terms__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>this is populated from the Opportunity</inlineHelpText>
        <label>Credit Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Subtotal__c</fullName>
        <label>Subtotal</label>
        <summarizedField>QuoteLineItem.DA_Total__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DC_Pickup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DC Pickup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expedited_Shipping_Fee__c</fullName>
        <formula>IF(Manager_Shipping_Override__c=True ||  Freight_Fees__c &gt;0, 0, CASE( Expedited_Shipping__c , 
&quot;2 - 2nd Day&quot;,15.00, 
&quot;3 - Next Day&quot;,25.00, 
0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The fee, where applicable, is included in the &quot;Calculated Shipping&quot; total below.</inlineHelpText>
        <label>Expedited Shipping Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expedited_Shipping__c</fullName>
        <description>This field used to be titled &apos;Expedited Shipping&apos; prior to 8/31/2015</description>
        <inlineHelpText>2-2nd Day ($15), 3-Next Day ($25) is added to the CW Freight Total</inlineHelpText>
        <label>*Ship Via</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Parcel Ground</fullName>
                </value>
                <value>
                    <fullName>2 - 2nd Day</fullName>
                </value>
                <value>
                    <fullName>3 - Next Day</fullName>
                </value>
                <value>
                    <fullName>4 - UPS Spec. Handling</fullName>
                </value>
                <value>
                    <fullName>77 - Furn. Spec. Handling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expires_On_Custom__c</fullName>
        <defaultValue>TODAY()+30</defaultValue>
        <inlineHelpText>Automatically adds 30 Days from the Quoted On Date if left blank</inlineHelpText>
        <label>Expires On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Destination_Country__c</fullName>
        <formula>TEXT(Opportunity.Final_Destination_Country1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Destination Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Destination_Method__c</fullName>
        <label>Final Destination Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client&apos;s Freight Forwarder</fullName>
                </value>
                <value>
                    <fullName>IFS Air</fullName>
                </value>
                <value>
                    <fullName>IFS Ocean</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Ship_To_Country_Formula__c</fullName>
        <formula>TEXT(Final_Ship_To_Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Ship To Country Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Ship_To_Country__c</fullName>
        <inlineHelpText>This field is for Offshore orders. Final destination for Freight Forwarders.</inlineHelpText>
        <label>Final Ship To Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Shipping_Country_2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                    <default>true</default>
                    <label>United States</label>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>----------Freight Forwarded---------</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Freight_Fees__c</fullName>
        <description>for manual entry to override formulas due to exception prices</description>
        <inlineHelpText>This field is used for quoting freight outside of the retail &amp; 7% freight model (example: Air or special handling costs) Adding a value in this field overrides all other freight calculation on the quote.</inlineHelpText>
        <label>Project Freight Request</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freight_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Be careful! :) This field overrides all Freight. Free shipping for ALL!</inlineHelpText>
        <label>Freight Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Furniture_Delivery_Rate__c</fullName>
        <label>Furniture Delivery Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Future_Date__c</fullName>
        <description>For SF&gt;CW Integration</description>
        <inlineHelpText>Choose CW Future Date</inlineHelpText>
        <label>Future Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift__c</fullName>
        <defaultValue>true</defaultValue>
        <label>*Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handling_Fees_Y_N__c</fullName>
        <description>if any of the line items in this quote require Handling Fees, select Yes.</description>
        <inlineHelpText>if any of the line items in this quote require Handling Fees, select Yes.</inlineHelpText>
        <label>Handling Fees? (Y/N)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Handling_Fees__c</fullName>
        <formula>Surcharge_Total__c+
IF(ISPICKVAL(Handling_Fees_Y_N__c,&quot;No&quot;),0,
IF(Use_7_percent_rate__c=&quot;Yes&quot;,(Products_with_Handling_Fees__c  * 0.07)-Surcharge_Total__c,
IF(ISPICKVAL(Manual_Entry_of_S_H_fees__c,&quot;Yes&quot;),0,
CASE(Range_for_Handling_Fees__c,
&quot;Local&quot;,
   CASE(Country__c,
     &quot;CA&quot;,225,&quot;US&quot;,149,0),
&quot;Extended&quot;,
   CASE(Country__c,
     &quot;CA&quot;,325,&quot;US&quot;,249,0),
&quot;National&quot;,
   CASE(Country__c,
     &quot;CA&quot;,425,&quot;US&quot;,349,0),
0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Surcharge Total listed below (if any) is included in the Handling Fees Total</inlineHelpText>
        <label>Handling Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <label>Install Date</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <formula>Opportunity.Oppty_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>this is populated from the Opportunity</inlineHelpText>
        <label>Invoice #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Shipping_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field overrides all Shipping and Handling including Project Freight Request</inlineHelpText>
        <label>Shipping Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Entry_of_S_H_fees__c</fullName>
        <inlineHelpText>if you need to manually enter the shipping and handling fees, change to Yes</inlineHelpText>
        <label>Manual Entry of S &amp; H Fees?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merchandise_Total__c</fullName>
        <formula>TotalPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of Merchandise less discount</inlineHelpText>
        <label>Merchandise Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Contract_Total__c</fullName>
        <formula>Total__c + Calculated_Shipping__c + Calculated_Handling__c + Calculated_Surcharge__c + Freight_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated by SFDC. This is the sum of the Total Price + Overall Tax +: 
A) Project Freight Quote (if entered) OR 
B) Calculated Shipping + Calculated Handling + Calculated Surcharge (if Project Freight Quote is not entered).</inlineHelpText>
        <label>Contract Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Shipping_Fees_Update__c</fullName>
        <formula>IF( Use_7_percent_rate__c =&quot;Yes&quot;,22,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;,Quoted_On__c &gt; DATE(2015,02,28),TEXT(Country__c)=&quot;CAN&quot;),51,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;,Quoted_On__c &gt; DATE(2012,09,20),TEXT(Country__c)=&quot;CAN&quot;),50,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;,Products_with_Shipping_Fees__c&gt;500.00,Shipping_Country__c =&quot;CAN&quot;),1,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;,Products_with_Shipping_Fees__c&gt;400.00,Shipping_Country__c  =&quot;CAN&quot;),2,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;,Products_with_Shipping_Fees__c&gt;500.00,Shipping_Country__c =&quot;US&quot;),3,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;,Products_with_Shipping_Fees__c&gt;300.00,Shipping_Country__c  =&quot;CAN&quot;),4,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;,Products_with_Shipping_Fees__c&gt;400.00,Shipping_Country__c =&quot;US&quot;),5,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;,Products_with_Shipping_Fees__c&gt;200.00,Shipping_Country__c =&quot;CAN&quot;),5,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;,Products_with_Shipping_Fees__c&gt;125.00,Shipping_Country__c =&quot;CAN&quot;),6,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;,Products_with_Shipping_Fees__c&gt;300.00,Shipping_Country__c =&quot;US&quot;),7,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;,Products_with_Shipping_Fees__c&gt;90.00,Shipping_Country__c =&quot;CAN&quot;),8,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;,Products_with_Shipping_Fees__c&gt;200.00,Shipping_Country__c =&quot;US&quot;),9,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;,Products_with_Shipping_Fees__c&gt;65.00,Shipping_Country__c =&quot;CAN&quot;),10,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;,Products_with_Shipping_Fees__c&gt;125.00,Shipping_Country__c  =&quot;US&quot;),11,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;,Products_with_Shipping_Fees__c&gt;45.00,Shipping_Country__c =&quot;CAN&quot;),12,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;,Products_with_Shipping_Fees__c&gt;90.00,Shipping_Country__c =&quot;US&quot;),13,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;,Products_with_Shipping_Fees__c&gt;65.00,Shipping_Country__c  =&quot;US&quot;),14,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;,Products_with_Shipping_Fees__c&gt;25.00,Shipping_Country__c  =&quot;CAN&quot;),15,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;,Products_with_Shipping_Fees__c&gt;45.00,Shipping_Country__c  =&quot;US&quot;),16,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;,Products_with_Shipping_Fees__c&gt;15.00,Shipping_Country__c  =&quot;CAN&quot;),17,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;,Products_with_Shipping_Fees__c&gt;25.00,Shipping_Country__c =&quot;US&quot;),18,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;,Products_with_Shipping_Fees__c&gt;0.00,Shipping_Country__c =&quot;CAN&quot;),19,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;,Products_with_Shipping_Fees__c&gt;15.00,Shipping_Country__c =&quot;US&quot;),20,
IF(AND(TEXT( Manual_Entry_of_S_H_fees__c)=&quot;No&quot;,Products_with_Shipping_Fees__c&gt;0.00,Shipping_Country__c =&quot;US&quot;),21,
0.00)))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Shipping Fees Update</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_ID_for_Conga__c</fullName>
        <formula>Opportunity.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp ID for Conga</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID_18_Char__c</fullName>
        <formula>CASESAFEID( OpportunityId )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID (18-Char)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Description__c</fullName>
        <inlineHelpText>Annotation, &quot;Sidemark&quot; or Order Description. 30 character maximum.</inlineHelpText>
        <label>Order Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Release_Date__c</fullName>
        <inlineHelpText>For Logistics Team to manage International Shipments</inlineHelpText>
        <label>Order Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Total__c</fullName>
        <formula>Tax_Total_2__c  +  CW_Freight_Total_2__c +  Merchandise_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Merchandise Total + CW Freight Total + Tax Total</inlineHelpText>
        <label>Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Origin_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Origin Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes (Origin Account)</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origin_Address__c</fullName>
        <formula>Origin_Account__r.BillingStreet   &amp; BR() &amp;
 Origin_Account__r.BillingCity  &amp; &quot;, &quot;
 &amp;  Origin_Account__r.BillingState   &amp; &quot; &quot; &amp;
 Origin_Account__r.BillingPostalCode   &amp; BR()
&amp;  Origin_Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Origin Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Origin Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes (Origin Contact)</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origin_Email__c</fullName>
        <formula>Origin_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Origin Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Phone__c</fullName>
        <formula>Origin_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Origin Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override__c</fullName>
        <defaultValue>&quot;M&quot;</defaultValue>
        <label>Override</label>
        <length>2</length>
        <type>Text</type>
    </fields>
</CustomObject>